# runjam

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  landing.html  package-lock.json  package.json  vite.config.ts
src/: App.vue  landing-main.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: acp.rs  acp_client.rs  lib.rs  log_util.rs  main.rs  models_config.rs  node_util.rs  proxy.rs  search.rs  state.rs  test_path.rs
src-tauri/src/agent/: detector.rs  installer.rs  manager.rs  mod.rs
src-tauri/src/commands/: agent_cmd.rs  app_cmd.rs  cost_cmd.rs  fs_cmd.rs  mod.rs  models_cmd.rs  ollama_cmd.rs  project_cmd.rs  proxy_cmd.rs  search_cmd.rs  session_cmd.rs  term_cmd.rs
src-tauri/src/cost/: mod.rs  parser.rs  tracker.rs
src-tauri/src/db/: connection.rs  migrations.rs
src-tauri/src/git/: mod.rs
src-tauri/src/models/: agent.rs  mod.rs  project.rs  session.rs  token_usage.rs
src-tauri/src/session/: runner.rs
src/api/: agents.ts  app.ts  costs.ts  fs.ts  models.ts  projects.ts  proxy.ts  search.ts  sessions.ts
src/components/: AgentCard.vue  AgentIcon.vue  AgentTabs.vue  ChatMessages.vue  CodeBlock.vue  ConfirmDialog.vue  EmptyState.vue  FileEditor.vue  FilePreview.vue  FileTree.vue  FileTreeNode.vue  InputPanel.vue  MermaidBlock.vue  SearchButton.vue  SessionItem.vue  SessionView.vue  SettingsLayout.vue  Sidebar.vue  StatusBadge.vue  TerminalPanel.vue  WorkspaceLayout.vue  WorkspacePanel.vue
src/composables/: useDragResize.ts  useMarkdown.ts  (+3 more)
(+19 files in other folders)
