[package]
name = "runjam"
version = "0.1.0"
description = "RunJam — A unified desktop manager for AI coding agents"
authors = ["RunJam Contributors"]
edition = "2021"
license = "MIT"
repository = "https://github.com/nicepkg/runjam"
homepage = "https://github.com/nicepkg/runjam"

[lib]
name = "runjam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
directories = "5"
toml = "1.1.2"
tiny_http = "0.12"
ureq = { version = "2.10", features = ["json"] }
portable-pty = "0.7"

